Changes in 0.2-3

	o increased string lengths accepted by gsubfn by eliminating
	  use of the R parse() command. [Thanks to Stefan Th. Gries
 	  for reporting problem.]

	o fixed bug in one of the examples in example(gsubfn)

Changes in 0.2-2

	o added combine= argument to strapply

	o fixed bug associated with using double quotes in gsub (which
	  also could affect strapply and cati).  [Thanks to Stefan Th.
	  Gries for reporting problem.]

Changes in 0.2-1 

	o added "note difference" example in strapply

	o letters, LETTERS and pi excluded from args so 
	  x ~ sin(x*pi/180) can be shortened to ~ sin(x*pi/180)
	  and 
 	  x ~ LETTERS[x] can be reduced to ~ LETTERS[x]
  	  (previously it would have added pi and LETTERS to arg
	  lists in these two examples)

	o improved as.function.formula.Rd

	o fixes to eliminate R CMD CHECK warnings under R 2.5.0
 
	o bug fix in $.fn.  If args and match.call order was different
	  it could fail previously.

	o new demos: gsubfn-gries.R, gsubfn-chron.R, gsubfn-si.R

	o THANKS file

Changes in 0.2-0 

	o match.funfn

	o as.function.formula improvements

	o $.fn

	o added numerous examples of $.fn to home page

Changes in 0.1-5

	o reference to cat0 missing from gsubfn-package.Rd

	o added digit separation example to strapply.Rd

	o added config file example to strapply.Rd

	o in strapply simplify= can be a function

	o replacement= in gsubfn and strapply can be a formula

	o new internal function as.function.formula

	o new home page and svn repository (URL in DESCRIPTION file)

Changes in 0.1-4

	o added cati, cati0, cat0 and paste0

	o added USE.NAMES argument to gsubfn

	o added gsubfn-cut demo

	o added repx example to gsubfn.Rd

	o added SI scale example to gsubfn.Rd

	o perl=, etc. args were not being passed to gsub

	o added moving window example to strapply.Rd

Changes in 0.1-3

	o enhanced gsubfn backref= argument

	o fixed bug in strapply

Changes in 0.1-2

	o cati added

	o updated DESCRIPTION and gsubfn-package.Rd
